--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.MyCourutins"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ShopItemActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity
             android:name=".presentation.MainViewModel"
             android:exported="false" />
         <activity
